--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,9 @@
         <item>Four</item>
         <item>Five</item>
     </string-array>
+    <string-array name="file">
+        <item>image</item>
+        <item>video</item>
+        <item>audio</item>
+    </string-array>
 </resources>
