Quiz .txt uzantılı dosya olarak kaydedildi

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">AndroidProgramming</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="chooser_title">Share</string>
     <string-array name="numbers">
         <item>Two</item>
         <item>Three</item>
